--- a/work_main/main.html
+++ b/work_main/main.html
@@ -10,8 +10,7 @@
     <div class="container">
         <header>
             <div class="user-info">
-                <h2>班级：计科2302</h2>
-                <h2>姓名：李泽亿</h2>
+                <h2>计科2302李泽亿网页作品集</h2>
             </div>
             <h1>项目导航主页</h1>
             <p class="subtitle">欢迎访问我们的项目集合页面。点击下方卡片可以浏览各个页面的内容，每个页面都有独特的设计和功能。</p>
