--- a/work_main/main.html
+++ b/work_main/main.html
@@ -21,7 +21,9 @@
             <div class="page-card">
                 <div class="card-header">
                     <div class="card-number">1</div>
-                    <div class="card-icon">🔐</div>
+                    <div class="card-screenshot">
+                        <img src="page1-screenshot.png" alt="页面1截图">
+                    </div>
                 </div>
                 <div class="card-content">
                     <h3 class="card-title">用户注册</h3>
@@ -34,7 +36,9 @@
             <div class="page-card">
                 <div class="card-header">
                     <div class="card-number">2</div>
-                    <div class="card-icon">🔑</div>
+                    <div class="card-screenshot">
+                        <img src="page2-screenshot.png" alt="页面2截图">
+                    </div>
                 </div>
                 <div class="card-content">
                     <h3 class="card-title">密码生成器</h3>
@@ -47,7 +51,9 @@
             <div class="page-card">
                 <div class="card-header">
                     <div class="card-number">3</div>
-                    <div class="card-icon">📋</div>
+                    <div class="card-screenshot">
+                        <img src="page3-screenshot.png" alt="页面3截图">
+                    </div>
                 </div>
                 <div class="card-content">
                     <h3 class="card-title">代办事项</h3>
@@ -60,7 +66,9 @@
             <div class="page-card">
                 <div class="card-header">
                     <div class="card-number">4</div>
-                    <div class="card-icon">🧠</div>
+                    <div class="card-screenshot">
+                        <img src="page4-screenshot.png" alt="页面4截图">
+                    </div>
                 </div>
                 <div class="card-content">
                     <h3 class="card-title">测试题目</h3>
@@ -73,7 +81,9 @@
             <div class="page-card">
                 <div class="card-header">
                     <div class="card-number">5</div>
-                    <div class="card-icon">🔍</div>
+                    <div class="card-screenshot">
+                        <img src="page5-screenshot.png" alt="页面5截图">
+                    </div>
                 </div>
                 <div class="card-content">
                     <h3 class="card-title">菜单搜索</h3>
